[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lvsim"
description = ""
version = "0.1.0"
authors = [
    {name = "Margaret Hansen", email = "margareh@andrew.cmu.edu"}
]
maintainers = [
    {name = "Margaret Hansen", email = "margareh@andrew.cmu.edu"}
]
readme = "README.md"
dependencies = [
    "numpy",
]
requires-python = ">= 3.8"

[project.scripts]
lvsim = "lvsim.cli:run"

